// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update-document-blueprint should handle non-existent document blueprint 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;

exports[`update-document-blueprint should update a document blueprint 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;
